# golang-with-bazel

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  go.mod  main.go  main_test.go
greeter/: BUILD.bazel  greeter.go  greeter_test.go
projects/go_hello_world/: BUILD.bazel  hello_world_test.go
projects/go_web/: BUILD.bazel  main.go
