load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "main",
    srcs = ["main.go"],
    deps = [":greeter"],
)

go_library(
    name = "greeter",
    importpath = "github.com/davidswisa/golang-with-bazel/greeter",
    srcs = ["greeter.go"],
)

go_test(
    name = "greeter_test",
    srcs = ["greeter_test.go"],
    embed = [":greeter"],
)